# xstatic-moment-timezone

./: setup.cfg  setup.py
xstatic/pkg/moment_timezone/: __init__.py
